Replace a deprecated Constructor